--- a/index.html
+++ b/index.html
@@ -42,31 +42,31 @@
         <div class="container-1b">
           <div class="rating-box1">
             <div class="stars">
-              <img src="/images/icon-star.svg">
-              <img src="/images/icon-star.svg">
-              <img src="/images/icon-star.svg">
-              <img src="/images/icon-star.svg">
-              <img src="/images/icon-star.svg">
+              <img src="images/icon-star.svg">
+              <img src="images/icon-star.svg">
+              <img src="images/icon-star.svg">
+              <img src="images/icon-star.svg">
+              <img src="images/icon-star.svg">
             </div>
             <span>Rated 5 Stars in Reviews</span>
           </div>
           <div class="rating-box2">
             <div class="stars">
-              <img src="/images/icon-star.svg">
-              <img src="/images/icon-star.svg">
-              <img src="/images/icon-star.svg">
-              <img src="/images/icon-star.svg">
-              <img src="/images/icon-star.svg">
+              <img src="images/icon-star.svg">
+              <img src="images/icon-star.svg">
+              <img src="images/icon-star.svg">
+              <img src="images/icon-star.svg">
+              <img src="images/icon-star.svg">
             </div>
             <span>Rated 5 Stars in Report Guru</span>
           </div>
           <div class="rating-box3">
             <div class="stars">
-              <img src="/images/icon-star.svg">
-              <img src="/images/icon-star.svg">
-              <img src="/images/icon-star.svg">
-              <img src="/images/icon-star.svg">
-              <img src="/images/icon-star.svg">
+              <img src="images/icon-star.svg">
+              <img src="images/icon-star.svg">
+              <img src="images/icon-star.svg">
+              <img src="images/icon-star.svg">
+              <img src="images/icon-star.svg">
             </div>
             <span>Rated 5 Stars in BestTech</span>
           </div>
@@ -76,7 +76,7 @@
       <div class="container-2">
         <div class="testamonial-1">
           <div class="header">
-            <img src="/images/image-colton.jpg">
+            <img src="images/image-colton.jpg">
             <div class="profile-name">
               <span class="colton">Colton Smith</span>
               <span class="vb">Verified Buyer</span>
@@ -90,7 +90,7 @@
         </div>
         <div class="testamonial-2">
           <div class="header">
-            <img src="/images/image-irene.jpg">
+            <img src="images/image-irene.jpg">
             <div class="profile-name">
               <span class="irene">Irene Roberts</span>
               <span class="vb">Verified Buyer</span>
@@ -103,7 +103,7 @@
         </div>
         <div class="testamonial-3">
           <div class="header">
-            <img src="/images/image-anne.jpg">
+            <img src="images/image-anne.jpg">
             <div class="profile-name">
               <span class="anne">Anne Wallace</span>
               <span class="vb">Verified Buyer</span>
